add scala-mode (scala-mode2)

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "yaml-mode"]
 	path = yaml-mode
 	url = git@github.com:jontsai/yaml-mode.git
+[submodule "scala-mode"]
+	path = scala-mode
+	url = git@github.com:jontsai/emacs-scala-mode.git
