--- a/.gitmodules
+++ b/.gitmodules
@@ -5,14 +5,17 @@
 	path = php-mode
 	url = git@github.com:jontsai/php-mode.git
 [submodule "editorconfig-emacs"]
-	path = editorconfig-emacs
+	path = editorconfig
 	url = git@github.com:jontsai/editorconfig-emacs.git
 [submodule "yaml-mode"]
 	path = yaml-mode
 	url = git@github.com:jontsai/yaml-mode.git
 [submodule "scala-mode"]
-	path = scala-mode
+	path = scala-mode2
 	url = git@github.com:jontsai/emacs-scala-mode.git
 [submodule "coffee-mode"]
 	path = coffee-mode
 	url = git@github.com:jontsai/coffee-mode.git
+[submodule "apex-mode"]
+	path = apex-mode
+	url = git@github.com:jontsai/apex-mode.git
