add py-isort submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "lua-mode"]
 	path = lua-mode
 	url = git@github.com:jontsai/lua-mode.git
+[submodule "py-isort"]
+	path = py-isort
+	url = git@github.com:jontsai/py-isort.el.git
