--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,30 @@
 [submodule "csharp-mode"]
 	path = csharp-mode
-	url = git@github.com:jontsai/csharp-mode.git
+	url = https://github.com/jontsai/csharp-mode.git
 [submodule "php-mode"]
 	path = php-mode
-	url = git@github.com:jontsai/php-mode.git
+	url = https://github.com/jontsai/php-mode.git
 [submodule "editorconfig-emacs"]
 	path = editorconfig
-	url = git@github.com:jontsai/editorconfig-emacs.git
+	url = https://github.com/jontsai/editorconfig-emacs.git
 [submodule "yaml-mode"]
 	path = yaml-mode
-	url = git@github.com:jontsai/yaml-mode.git
+	url = https://github.com/jontsai/yaml-mode.git
 [submodule "scala-mode"]
 	path = scala-mode
-	url = git@github.com:jontsai/emacs-scala-mode.git
+	url = https://github.com/jontsai/emacs-scala-mode.git
 [submodule "coffee-mode"]
 	path = coffee-mode
-	url = git@github.com:jontsai/coffee-mode.git
+	url = https://github.com/jontsai/coffee-mode.git
 [submodule "apex-mode"]
 	path = apex-mode
-	url = git@github.com:jontsai/apex-mode.git
+	url = https://github.com/jontsai/apex-mode.git
 [submodule "lua-mode"]
 	path = lua-mode
-	url = git@github.com:jontsai/lua-mode.git
+	url = https://github.com/jontsai/lua-mode.git
 [submodule "py-isort"]
 	path = py-isort
-	url = git@github.com:jontsai/py-isort.el.git
+	url = https://github.com/jontsai/py-isort.el.git
 [submodule "puppet-mode"]
 	path = puppet-mode
-	url = git@github.com:jontsai/puppet-mode.git
+	url = https://github.com/jontsai/puppet-mode.git
