--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "typescript-mode"]
 	path = typescript-mode
 	url = https://github.com/jontsai/typescript.el
+[submodule "copilot"]
+	path = copilot
+	url = https://github.com/jontsai/copilot.el
